corpus/literals.txt
=====================================
nil + booleans
=====================================

nil ; nil
true
false

---

(program
  (nil) (comment)
  (true)
  (false))

=====================================
Numbers
=====================================

42
+1
-5
+0

4.23e9
4.23e-9
4.23e+9
40.3e6
40.3e-6
1.234
0.123456
.12345
1e4
0.2e-2
0.0e-4
.2e-2

---

(program
  (number (number_long))
  (number (number_long))
  (number (number_long))
  (number (number_long))

  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double))
  (number (number_double)))

=====================================
Characters - \a
=====================================

\a
\b
\Z
\}

\newline
\space
\tab
\formfeed
\backspace
\return

\u2202
\u03a9
\u00A1

\o3
\o41
\o256

---

(program
  (character)
  (character)
  (character)
  (character)

  (character)
  (character)
  (character)
  (character)
  (character)
  (character)

  (character)
  (character)
  (character)

  (character)
  (character)
  (character))

=====================================
Strings - ""
=====================================

""
"\""
"abc"
"'"

---

(program
  (string)
  (string)
  (string)
  (string))


=====================================
Keywords - :foo
=====================================

:foo
:rubber-baby-buggy-bumper!
:j3_!:7
:HELICOPTER
:+fiduciary+

::foo

---

(program
  (keyword (unqualified_keyword))
  (keyword (unqualified_keyword))
  (keyword (unqualified_keyword))
  (keyword (unqualified_keyword))
  (keyword (unqualified_keyword))

  (keyword (qualified_keyword))
  )

=====================================
Sets - #{}
=====================================

#{}
#{true}
#{true false}
#{"a", "b", nil}

---

(program
  (set)
  (set (true))
  (set (true) (false))
  (set (string) (string) (nil)))

=====================================
Hash Map - {}
=====================================

{}
{true false}
{true false, false true}

---

(program
  (hash_map)
  (hash_map (hash_map_kv_pair (hash_map_key (true))
                              (hash_map_value (false))))
  (hash_map (hash_map_kv_pair (hash_map_key (true))
                              (hash_map_value (false)))
            (hash_map_kv_pair (hash_map_key (false))
                              (hash_map_value (true)))))

=====================================
Vector - []
=====================================

[]
[true]
["a" :b 3]

---

(program
  (vector)
  (vector (true))
  (vector (string) (keyword (unqualified_keyword)) (number (number_long))))
